--- a/style.css
+++ b/style.css
@@ -393,6 +393,10 @@ nav ul li a .heart {
 
 /* Estilo Top Clientes */
 
+.top-clients {
+    margin-left: 1.5rem;
+}
+
 .client-item {
     display: grid;
     grid-template-columns: 150px 1fr;
@@ -400,9 +404,8 @@ nav ul li a .heart {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-left: 20px;
+    margin: 20px 30px;
     margin-right: 30px;
-    margin-bottom: 20px;
     padding: 20px;
     align-items: center;
 
@@ -441,6 +444,16 @@ nav ul li a .heart {
     justify-content: left;
 }
 
+.client-details .price {
+    background-color: #BD1E51;
+    color: white;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    align-self: flex-start;
+}
+
 .client-details button {
     background-color: #BD1E51;
     color: white;
@@ -459,7 +472,78 @@ nav ul li a .heart {
 
 /* Estilo Newsletter */
 
+.newsletter {
+    max-width: 100%;
+    background-color: #F1B814;
+    color: #001730;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+}
+
+.newsletter h2 {
+    font-family: 'Libre Baskerville', serif;
+    font-size: 1.5rem;
+    margin: 0 0 20px 0;
+}
+
+.newsletter form {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.newsletter form input,
+.newsletter form button {
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #D9D9D9;
+    font-size: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: #001730;
+}
+
+.newsletter form input {
+    font-weight: lighter;
+}
+
+.newsletter form button {
+    background-color: #BD1E51; 
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+
 /* Estilo Footer */
+
+.footer {
+    list-style: none;
+    display: flex;
+
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.footer li {
+    margin: 0 10px;
+}
+
+.footer li a {
+    text-decoration: none;
+    color: #001730;
+    font-size: 20px;
+    font-weight: medium;
+    padding: 5px 10px;
+}
+
+.footer-socials {
+
+}
 
 /* Estilo Countries */
 
@@ -550,7 +634,6 @@ nav ul {
 }
 
 /* Estilos de mejores ventas */ 
-/* hay un pequeño scroll lateral cuando implemento esto, ver que es */ 
 
 .grid-container {
     grid-template-columns: repeat(1, 1fr);
@@ -569,19 +652,96 @@ nav ul {
     padding: 10px;
 }
 
-.featured-book {
+.featured-book img {
     display: none;
+    flex-direction: column;
 }
 
 .featured-book-info {
     margin: 10px 0;
 }
 
+.featured-book-info button{
+    width: 18rem;
+}
+
 /* Estilo Top Clientes */
+
+.client-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0px;
+    margin: 20px 0;
+    gap: 20px;
+    background-color: rgba(217, 217, 217, 0.2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.client-item img {
+    width: 150px;
+    height: 250px;
+    border: 5px solid #F1B814;
+    border-radius: 5px;
+    margin-right: 0;
+}
+
+.client-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.client-details h3 {
+    font-size: 1.5rem;
+    margin: 10px 0;
+}
+
+.client-details p {
+    font-size: 1rem;
+    text-align: center; /* en la maqueta está a la izquierda, pero me gusta más centrado */
+    margin: 0 0 10px 0;
+    color: #001730;
+}
+
+.client-details .rating {
+    color: #FFD700;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.client-details button {
+    /* align-content: center; */
+    background-color: #BD1E51;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    align-self: center;
+    width: 18rem;
+}    
 
 /* Estilo Newsletter */
 
+.newsletter form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 /* Estilo Footer */
+
+.footer {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin: 15px;
+    padding: 0;
+}
 
 /* Estilo Countries */
 
@@ -674,7 +834,7 @@ nav ul {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilos de mejores ventas */  
+    /* Estilos de mejores ventas */  
 
 .grid-container {
     grid-template-columns: repeat(1, 1fr);
@@ -685,7 +845,7 @@ nav ul {
     height: auto;
 }
 
-/* Estilos Libros recomendados */
+    /* Estilos Libros recomendados */
 
 .featured-books {
     flex-direction: column;
@@ -699,14 +859,97 @@ nav ul {
     margin: 10px 0;
 }
 
-/* Estilo Top Clientes */
+.featured-book-info button{
+    width: 18rem;
+}
+
+    /* Estilo Top Clientes */
+
+.client-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0px;
+    margin: 20px 0;
+    gap: 20px;
+    background-color: rgba(217, 217, 217, 0.2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.client-item img {
+    width: 150px;
+    height: 250px;
+    border: 5px solid #F1B814;
+    border-radius: 5px;
+    margin-right: 0;
+}
+
+.client-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.client-details h3 {
+    font-size: 1.5rem;
+    margin: 10px 0;
+}
+
+.client-details p {
+    font-size: 1rem;
+    margin: 0 0 10px 0;
+    color: #001730;
+}
+
+.client-details .rating {
+    color: #FFD700;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.client-details button {
+    /* align-content: center; */
+    background-color: #BD1E51;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    align-self: center;
+    width: 18rem;
+}    
+
 
 /* Estilo Newsletter */
 
+.newsletter {
+    padding: 1rem;
+}
+.newsletter form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 /* Estilo Footer */
 
-/* Estilo Countries */
+.footer {
+    flex-direction: column;
+    align-items: start;
+    margin: 15px;
+}
 
+.footer-socials {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 1.25rem;
+
+}
+
+/* Estilo Countries */
 
 }
 
@@ -732,76 +975,76 @@ header {
     padding-bottom: 15px;
 }
     
-    nav ul {
-        list-style: none;
-        display: flex;
-        align-items: center;
-        margin: 0;
-        padding: 0;
-    }
+nav ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
     
-    nav ul li {
-        margin: 0 10px;
-    }
+nav ul li {
+    margin: 0 10px;
+}
     
-    nav ul li a {
-        text-decoration: none;
-        color: #001730;
-        font-size: 20px;
-        font-weight: bold;
-        padding: 5px 10px;
-    }
+nav ul li a {
+    text-decoration: none;
+    color: #001730;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 5px 10px;
+}
     
-    nav ul li a .heart {
-        color: red;
-    }
+nav ul li a .heart {
+    color: red;
+}
     
-    .button {
-        background-color: white;
-        color: #001730;
-        border-radius: 20px;
-        border: 1px solid #D9D9D9;
-        transition: background-color 0.3s, color 0.3s;
-    }
+.button {
+    background-color: white;
+    color: #001730;
+    border-radius: 20px;
+    border: 1px solid #D9D9D9;
+    transition: background-color 0.3s, color 0.3s;
+}
     
-    .button:hover {
-        background-color: #f0f0f0;
-        color: #001730;
-    }
+.button:hover {
+    background-color: #f0f0f0;
+    color: #001730;
+}
 
     /* Estilos de la sección hero */  
 
-    .hero {
-        flex-direction: column;
-        text-align: center;
-    }
+.hero {
+    flex-direction: column;
+    text-align: center;
+}
 
-    .hero-text h1 {
-        font-size: 2rem;
-        padding-top: 2.5rem;
-    }
+.hero-text h1 {
+    font-size: 2rem;
+    padding-top: 2.5rem;
+}
 
-    .hero-text p {
-        font-size: 1.2rem;
-        padding-bottom: 2.5rem;
+.hero-text p {
+    font-size: 1.2rem;
+    padding-bottom: 2.5rem;
 
-    }
+}
 
-    .hero-image {
-        width: 100%;
-        height: 20rem;
-    }
+.hero-image {
+    width: 100%;
+    height: 20rem;
+}
 
-    .search-box {
-        max-width: 100%;
-        background-color: #F1B814;
-    }
+.search-box {
+    max-width: 100%;
+    background-color: #F1B814;
+}
 
-    .search-box form {
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
-    }
+.search-box form {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
 
     /* Estilos de mejores ventas */  
 
